* What is new in gsl-0.9.3:

* Routines for complex LU decomposition are now available, allowing
the solution of systems of equations with complex coefficients.

* Matrix views of vectors now correctly require a unit stride for the
original vector.

* Permutations can now be applied to complex arrays and vectors.

* gsl_sf_pow_int now handles the case x = 0, n < 0

* The static versions of inline functions can now be hidden by
defining the preprocessor macro HIDE_INLINE_STATIC.  This is needed
for some compilers.

* The original seeding procedure of mt19937 is available through the
generator gsl_rng_mt19937_1998.  The seeding procedure was flawed, but
is available for compatibility.

* Added missing functions gsl_complex_div_real and
gsl_complex_div_imag.

* Missing functions for constant vector and matrix views have now been
added.

* Statistical calculations for histograms are now available, and the
gsl-histogram command also displays the histogram mean and standard
deviation.

* The behavior of GSL_IEEE_MODE for denormalized exceptions has been
fixed on Openbsd and Netbsd.

* A pkg-config file gsl.pc is included in the distribution

* The reference manual can now be printed in @smallbook format without
overflow.

* What was new in gsl-0.9.2:

* Vector and matrix views are now compliant with the ANSI standard.

* Added Lambert functions gsl_sf_lambert_W0, gsl_sf_lambert_Wm1.

* The reference manual now uses the GNU Free Documentation License.

* Fixed a couple of bugs in the SVD routines.

* Macros for Infinity and Nan now work correctly with Microsoft Visual
C++, and a bug in the config.h file for the finite() function has been
fixed.

* Redundant entries in the test suite for the complex math functions
have been removed, making the distribution size smaller.

* Installed programs gsl-randist and gsl-histogram now use shared
libraries.

* What was new in gsl-0.9.1:

** The single precision ffts now uses float throughout, rather than
mixing float and double.
